--- a/BFF.DataVirtualizingCollection.Sample.View/App.xaml
+++ b/BFF.DataVirtualizingCollection.Sample.View/App.xaml
@@ -1,3 +1,4 @@
 ﻿<Application x:Class="BFF.DataVirtualizingCollection.Sample.View.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" />
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:view="clr-namespace:BFF.DataVirtualizingCollection.Sample.View" />
